# smoke-hill

./: .gitignore  .travis.yaml  .travis.yml  BUILD.bazel  Dummy.idr  README.md  WORKSPACE  default.nix  packages.bzl  shell.nix
example/: README.md  shell.nix
example/nix/: sources.json
nix/: idris2.nix  make.patch  package-sources.json  package-sources.nix  packages.nix  sources.json  with-packages.nix
