load("@rules_idris//idris:rules_idris.bzl", "idris_library")

idris_library (
    name = "smoke-hill",
    deps = [ "@idris-effects//:effects"
           , "@idris-contrib//:contrib"
           , "@lightyear//:lightyear"
           , "@tomladris//:tomladris"
           ],
    srcs = ["Dummy.idr"],
    visibility = ["//visibility:public"],
)
